# mev_bot_eth_pub

./: .gitignore  Cargo.toml  README.md
data/: mock_data.txt
data/frontrun/: frontrun_swaps_0x104cE4f4F30daBC768ba1a8122334303aEA594e2.json  frontrun_swaps_0x21Df63281C00fF8a52b84FE58198d817097942F8.json  frontrun_swaps_0x229C4580cc43D18bAe24bd541688983bCEfE0377.json  frontrun_swaps_0x26577F58aF2F7De1A85034bb360fD154cdA022f3.json  frontrun_swaps_0x3187065fc51a0Ca3C92734D3307EeA8790767AD7.json  frontrun_swaps_0x3885fbe4CD8aeD7b7e9625923927Fa1CE30662A3.json  frontrun_swaps_0x3CcDaC86f5943291Fe5B20C40172F0F9414bCC0D.json  frontrun_swaps_0x3be023902ea4120CACdC803E5801d9b117381ac0.json  frontrun_swaps_0x537bB3598A20937C4bFdb413C6d46C13CD0A5dd6.json  frontrun_swaps_0x594b60CFCe31dcFaBCA38B720C4B7fe661c806a1.json  frontrun_swaps_0x60E3e9887DC92BD48756cf44F45fbc3b19F76927.json  frontrun_swaps_0x613e6c7b431aBd0F147c66BBC24E91C03140DfF8.json  frontrun_swaps_0x69C7bd26512f52bF6F76faB834140D13Dda673Ca.json  frontrun_swaps_0x8407B9a9e61101E73fb427c3740C89E10Da93D12.json  frontrun_swaps_0x94E9F10E59a63C1D757997E1053384F795996b4F.json  frontrun_swaps_0x9cF1190D71f7c5FCaF2033FfA4b017B1b0591EfD.json  frontrun_swaps_0xA3a93b1f3d76b97A81D7d39e8C81a4dE08154a37.json  frontrun_swaps_0xB0532Dd6808dA333F850b2E9F3EeDDC6559b19Cf.json  frontrun_swaps_0xB10d5aCEE2233a30f03ADf6f425249113395D7a8.json  frontrun_swaps_0xBb5dEb57aF49a700827A01C9e86c164685272998.json  frontrun_swaps_0xCaEC15994190a6CdED02A9488f23a2CcA12d7afd.json  (+6 more)
data/logs/: benchmarking_log.txt
src/: lib.rs  main.rs
(+20 files in other folders)
