[package]
name = "mev_rodemar"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.0", features = ["full", "node-bindings"] }
alloy-contract = "0.2.0"
alloy-core = {version = "0.7.7", features = ["eip712" ]}
alloy-mev = "0.2.1"
# alloy-signer = "0.2.1"
# alloy-signer-local = "0.2.1"
alloy-sol-macro = "0.7.7"
alloy-sol-types = {version = "0.7.7"}
async-trait = "0.1.80"
cargo-modules = "0.16.1"
chrono = "0.4.38"
config = "0.14.0"
csv = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
log = "0.4.21"
mockall = "0.12.1"
once_cell = "1.19.0"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.120"
serde_with = "3.9.0"
tiny-keccak = "2.0.2"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"

[features]
eip712 = []

